--- a/README.rdoc
+++ b/README.rdoc
@@ -1,17 +1,21 @@
-= interval_tree
+Title:: the IntervalTree module using "argumanted tree"
+Author:: MISHIMA, Hiroyuki ( https://github.com/misshie ), 2011
+Copyright:: The MIT/X11 license
 
-Description goes here.
+see also ....
+description in Wikipedia http://en.wikipedia.org/wiki/Interval_tree
 
-== Note on Patches/Pull Requests
- 
-* Fork the project.
-* Make your feature addition or bug fix.
-* Add tests for it. This is important so I don't break it in a
-  future version unintentionally.
-* Commit, do not mess with rakefile, version, or history.
-  (if you want to have your own version, that is fine but bump version in a commit by itself I can ignore when I pull)
-* Send me a pull request. Bonus points for topic branches.
+an implementstion in Python by Tyler Kahn http://forrst.com/posts/Interval_Tree_implementation_in_python-e0K    
 
-== Copyright
+Usage::
+ require "interval_tree"
 
-Copyright (c) 2011 Hiroyuki Mishima. See LICENSE for details.
+ itv = [(0...3), (1...4), (3...5),]
+ t = IntervalTree::Tree.new(itv)
+ p t.search(2) => [0...3, 1...4]
+ p t.search(1...3) => [0...3, 1...4, 3...5]
+
+note:: result intervals are always returned
+in the "left-closed and right-open" style that can be expressed
+by three-dotted Range object literals (first...last)
+
