--- a/README.rdoc
+++ b/README.rdoc
@@ -1,13 +1,14 @@
+= IntervalTree
+
 Title:: the IntervalTree module using "argumanted tree"
-Author:: MISHIMA, Hiroyuki ( https://github.com/misshie ), 2011
+Author:: MISHIMA, Hiroyuki ( https://github.com/misshie )
 Copyright:: The MIT/X11 license
 
-see also ....
-description in Wikipedia http://en.wikipedia.org/wiki/Interval_tree
+== see also
+*description in Wikipedia http://en.wikipedia.org/wiki/Interval_tree
+*an implementstion in Python by Tyler Kahn http://forrst.com/posts/Interval_Tree_implementation_in_python-e0K    
 
-an implementstion in Python by Tyler Kahn http://forrst.com/posts/Interval_Tree_implementation_in_python-e0K    
-
-Usage::
+== usage
  require "interval_tree"
 
  itv = [(0...3), (1...4), (3...5),]
@@ -15,7 +16,10 @@ Usage::
  p t.search(2) => [0...3, 1...4]
  p t.search(1...3) => [0...3, 1...4, 3...5]
 
-note:: result intervals are always returned
+== note
+result intervals are always returned
 in the "left-closed and right-open" style that can be expressed
 by three-dotted Range object literals (first...last)
 
+Full-closed intervals "(first..last)" for tree are internally
+converted to half-closed intervals.
