--- a/README.rdoc
+++ b/README.rdoc
@@ -1,14 +1,11 @@
 = IntervalTree
+An implementation of the argumented interval tree algorithm in Ruby
 
-Title:: the IntervalTree module using "argumanted tree"
-Author:: MISHIMA, Hiroyuki ( https://github.com/misshie )
-Copyright:: The MIT/X11 license
+== See also
+* description in Wikipedia http://en.wikipedia.org/wiki/Interval_tree
+* an implementstion in Python by Tyler Kahn http://forrst.com/posts/Interval_Tree_implementation_in_python-e0K    
 
-== see also
-*description in Wikipedia http://en.wikipedia.org/wiki/Interval_tree
-*an implementstion in Python by Tyler Kahn http://forrst.com/posts/Interval_Tree_implementation_in_python-e0K    
-
-== usage
+== Usage
  require "interval_tree"
 
  itv = [(0...3), (1...4), (3...5),]
@@ -16,10 +13,15 @@ Copyright:: The MIT/X11 license
  p t.search(2) => [0...3, 1...4]
  p t.search(1...3) => [0...3, 1...4, 3...5]
 
-== note
+== Note
 result intervals are always returned
 in the "left-closed and right-open" style that can be expressed
 by three-dotted Range object literals (first...last)
 
 Full-closed intervals "(first..last)" for tree are internally
 converted to half-closed intervals.
+
+== Copyright
+Author:: MISHIMA, Hiroyuki ( https://github.com/misshie )
+Copyright:: (c) 2011, MISHIMA, Hiroyuki
+License:: The MIT/X11 license
